# geminicodeagent

./: .gitignore  GEMINI.md  cloudbuild.yaml
apicodebackend/: .dockerignore  .gitignore  Dockerfile  main.py  pricing.py  pyproject.toml  requirements.txt  services.py  services_paid.py
apicodefrontend/: README.md  package-lock.json  package.json
apicodefrontend/src/app/: page.tsx
apicodefrontend/src/components/: code-tab.tsx  file-upload.tsx
apicodefrontend/src/lib/: api.ts
backend/: README.md  main.py  pyproject.toml  services.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: analysis-tab.tsx  charts-tab.tsx  file-upload.tsx  model-files-tab.tsx
