[project]
name = "apicodebackend"
version = "0.1.0"
description = "Data anaysis and visualization agent with Gemini api"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.3",
    "uvicorn>=0.38.0",
    "google-genai>=1.52.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.1",
]
